# escapepod-rs

./: ...  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  demo.tape  index.html  mkdocs.yml  netlify.toml  pixi.toml  search.json  sitemap.xml  tombi.toml  zensical.toml
crates/escapepod/: Cargo.toml  pyproject.toml
crates/escapepod-cli/: Cargo.toml  build.rs  pyproject.toml
crates/escapepod-cli/src/: lib.rs  main.rs  style.rs  util.rs
crates/escapepod-cli/src/commands/: bam_filter.rs  filter.rs  index.rs  inspect.rs  merge.rs  mod.rs  profile.rs  repack.rs  resquiggle.rs  resquiggle_models.rs  subset.rs  summary.rs  view.rs
crates/escapepod-demux/: Cargo.toml
crates/escapepod-demux/benches/: classify.rs
crates/escapepod-demux/examples/: analyze_pruning.rs  cnn_gpu_bench.rs  gpu_detect_timing.rs  prep_breakdown.rs  profile_classify.rs  profile_gbm.rs
crates/escapepod-demux/src/: adapter_cnn.rs  adapter_cnn_compute.rs  adapter_cnn_gpu.rs  classify.rs  fingerprint.rs  gbm.rs  gpu_cnn.rs  lib.rs  model.rs  probability.rs  svm.rs  train.rs
crates/escapepod-demux/src/svm/: gpu.rs  kernel.rs  mod.rs  predictor.rs  workspace.rs
crates/escapepod-demux/tests/: adapter_cnn_batch_parity.rs  cnn_compute_parity.rs  gbm_parity.rs  gpu_cnn.rs  gpu_fingerprint.rs  gpu_svm_batch.rs  pipeline.rs
crates/escapepod-pod5/: Cargo.toml
crates/escapepod-pod5/benches/: io_hot_paths.rs
crates/escapepod-pod5/examples/: bulk_io_bench.rs  mmap_vs_read.rs  par_io_bench.rs  rice_vs_vbz.rs
crates/escapepod-pod5/src/: arrow_helpers.rs  arrow_ipc.rs  fields.rs  lib.rs  merge.rs  types.rs
crates/escapepod-pod5/src/compression/: mod.rs  vbz.rs
crates/escapepod-pod5/src/flatbuffers_gen/: mod.rs
crates/escapepod-pod5/src/operations/: filter.rs  (+3 more)
crates/escapepod-pod5/tests/: test_atomic_write.rs  test_field_fidelity.rs  test_merge_integration.rs  test_operations_integration.rs  test_reader_integration.rs  test_signal_roundtrip.rs  test_writer_integration.rs
crates/escapepod-python/: Cargo.toml  README.md  build.rs  escapepod.pyi  pyproject.toml
crates/escapepod-python/src/: dataset.rs  lib.rs  read_data.rs  reader.rs  signal.rs  writer.rs
crates/escapepod-signal/: Cargo.toml
crates/escapepod-signal/benches/: hot_paths.rs
crates/escapepod-signal/examples/: dtw_example.rs  write_pod5.rs
crates/escapepod-signal/src/: lib.rs  stats.rs
crates/escapepod-signal/tests/: gpu_dtw.rs  gpu_llr_detect.rs  gpu_svb16.rs  integration_tests.rs  test_resquiggle.rs
crates/escapepod/src/: lib.rs  main.rs  progress.rs  util.rs
escapepod/: Cargo.toml
escapepod-cli/: Cargo.toml  pyproject.toml
escapepod-cli/src/: main.rs  style.rs  util.rs
escapepod-cli/src/commands/: archive.rs  bam_filter.rs  demux.rs  filter.rs  index.rs  inspect.rs  merge.rs  mod.rs  repack.rs  resquiggle.rs  subset.rs  summary.rs  view.rs
escapepod-pod5/: Cargo.toml
escapepod-pod5/src/: fields.rs  lib.rs  types.rs
escapepod-pod5/src/compression/: mod.rs
escapepod-pod5/src/operations/: subset.rs
escapepod-pod5/src/reader/: file_reader.rs
escapepod-pod5/src/utils/: pod5_assembler.rs  uuid.rs
escapepod-pod5/src/writer/: file_writer.rs
escapepod-pod5/tests/: test_merge_integration.rs  test_reader_integration.rs
escapepod-pod5/tests/common/: mod.rs
escapepod-py/: Cargo.toml  pyproject.toml
escapepod-py/python/escapepod/: __init__.py  _escapepod.pyi
escapepod-py/src/: lib.rs  read.rs  reader.rs  run_info.rs
escapepod-py/tests/: test_reader.py
escapepod-signal/: Cargo.toml
escapepod-signal/benches/: hot_paths_gpu.rs
escapepod-signal/examples/: bench_reads_by_ids.rs
escapepod-signal/src/: lib.rs
escapepod-signal/src/demux/: classify.rs  mod.rs  model.rs  svm.rs  train.rs
escapepod-signal/src/dtw/: distance.rs  fingerprint.rs
escapepod-signal/src/resquiggle/: adaptive_dp.rs  dp_raw_penalty.rs  mod.rs
escapepod-signal/src/segmentation/: llr.rs  mod.rs  normalize.rs  ttest.rs
escapepod-signal/tests/: gpu_dtw.rs  integration_tests.rs  test_demux_pipeline.rs  test_resquiggle_pipeline.rs
escapepod-vortex/: BENCHMARK.md  Cargo.toml
escapepod-vortex/examples/: signal_bench.rs
escapepod-vortex/src/: delta_scheme.rs  error.rs  lib.rs  signal.rs
escapepod/benches/: hot_paths.rs
escapepod/examples/: bench_reads_by_ids.rs  write_pod5.rs
escapepod/src/: arrow_helpers.rs  arrow_ipc.rs  fields.rs  footer.rs  lib.rs  merge.rs  progress.rs  signal.rs  types.rs
escapepod/src/compression/: vbz.rs
escapepod/src/demux/: catboost.rs  classify.rs  mod.rs  model.rs  svm.rs  train.rs
escapepod/src/dtw/: distance.rs  dtw.rs  fingerprint.rs  kernel.rs  mod.rs  subsequence.rs
escapepod/src/flatbuffers_gen/: footer_generated.rs
escapepod/src/operations/: csv_utils.rs  filter.rs  mod.rs  repack.rs  split.rs  subset.rs
escapepod/src/reader/: file_reader.rs  mod.rs  read_index.rs  read_iter.rs  signal_cache.rs  signal_extractor.rs
escapepod/src/resquiggle/: adaptive_dp.rs  bands.rs  dp.rs  kmer_table.rs  mod.rs  refine.rs  rescale.rs  types.rs
escapepod/src/schema/: reads.rs  run_info.rs
escapepod/src/segmentation/: consensus.rs  llr.rs  mod.rs  normalize.rs  ttest.rs
escapepod/src/utils/: mod.rs  run_info.rs  statistics.rs  table_builders.rs  uuid.rs
escapepod/src/writer/: file_writer.rs
escapepod/tests/: integration_tests.rs  test_resquiggle.rs
podfive-cli/: Cargo.toml
podfive-cli/src/: main.rs  progress.rs  util.rs
podfive-cli/src/commands/: bam_filter.rs  filter.rs  inspect.rs  merge.rs  mod.rs  repack.rs  subset.rs  summary.rs  view.rs
podfive-core/: Cargo.toml
podfive-core/src/: arrow_ipc.rs  error.rs  fields.rs  footer.rs  lib.rs  merge.rs  types.rs
podfive-core/src/compression/: svb16.rs
podfive-core/src/operations/: filter.rs  mod.rs  repack.rs  subset.rs
podfive-core/src/reader/: file_reader.rs
podfive-core/src/schema/: mod.rs  reads.rs  run_info.rs  signal.rs
podfive-core/src/utils/: dictionary.rs  mod.rs  run_info.rs  statistics.rs  table_builders.rs  uuid.rs
podfive-core/src/writer/: file_writer.rs  mod.rs
(+210 files in other folders)
