[workspace]
resolver = "2"
members = ["escapepod", "escapepod-cli", "escapepod-python"]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/rnabioco/escapepod-rs"
license = "MIT"

[workspace.dependencies]
# Error handling
anyhow = "1"
# Arrow ecosystem
arrow = { version = "58", default-features = false, features = ["ipc"] }
byteorder = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# Workspace crates
escapepod = { path = "escapepod", version = "0.1.2" }
# Serialization
flatbuffers = "25"
indicatif = "0.18"
# I/O
memmap2 = "0.9"
rayon = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Compression
zstd = "0.13"
# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Optimized release build: LTO + single codegen unit for maximum performance.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# `cargo bench` uses [profile.bench], which by default does NOT inherit from
# [profile.release]. Pin it here so microbenchmarks measure the same codegen
# (LTO, single codegen unit) that ships in the release binary. `strip` and
# `panic = "abort"` are omitted: criterion needs symbols and unwinding.
[profile.bench]
inherits = "release"
strip = false
panic = "unwind"

# Release-speed build with symbols preserved — for samply/perf recordings
# where you want final codegen but readable stack traces.
[profile.release-with-debug]
inherits = "release"
strip = false
debug = 2

# Profiling build: drops LTO and splits codegen so frames aren't inlined
# away from profilers (valgrind, perf, samply). Slower than release, but
# faithfully reports call graphs.
[profile.profiling]
inherits = "release"
lto = false
codegen-units = 16
strip = false
debug = 2

# Fast dev builds, but with optimized third-party crates so tests run
# at a reasonable speed.
[profile.dev.package."*"]
opt-level = 2

[profile.dist]
inherits = "release"
