[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/rnabioco/escapepod-rs"
license = "MIT"

[workspace.dependencies]
# Error handling
anyhow = "1"
# Arrow ecosystem
arrow = { version = "58", default-features = false, features = ["ipc"] }
byteorder = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# Workspace crates
escapepod-demux = { path = "crates/escapepod-demux", version = "0.4.0" }
escapepod-pod5 = { path = "crates/escapepod-pod5", version = "0.4.0" }
escapepod-signal = { path = "crates/escapepod-signal", version = "0.4.0" }
# Serialization
flatbuffers = "25"
indicatif = "0.18"
# I/O
memmap2 = "0.9"
rayon = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Compression
zstd = "0.13"
# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# GPU acceleration (opt-in via `gpu` feature; runtime-compiled CUDA kernels via NVRTC).
cudarc = { version = "0.12", default-features = false, features = ["std", "driver", "nvrtc", "cuda-12020"] }
# Pure-Rust ONNX runtime for the CNN adapter detector (opt-in via `cnn-detect`).
tract-onnx = "0.21"

# Optimized release build: LTO + single codegen unit for maximum performance.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# `cargo bench` uses [profile.bench], which by default does NOT inherit from
# [profile.release]. Pin it here so microbenchmarks measure the same codegen
# (LTO, single codegen unit) that ships in the release binary. `strip` is
# disabled so criterion has symbols; `panic` is not set because Cargo ignores
# it for bench profiles (bench binaries always unwind).
[profile.bench]
inherits = "release"
strip = false

# Release-speed build with symbols preserved — for samply/perf recordings
# where you want final codegen but readable stack traces. Debuginfo is
# split into a sibling `.dwp` so the binary stays small and link time
# doesn't balloon; samply/perf/gdb pick up the sidecar automatically.
[profile.release-with-debug]
inherits = "release"
strip = false
debug = 2
split-debuginfo = "packed"

# Profiling build: drops LTO and splits codegen so frames aren't inlined
# away from profilers (valgrind, perf, samply). Slower than release, but
# faithfully reports call graphs.
[profile.profiling]
inherits = "release"
lto = false
codegen-units = 16
strip = false
debug = 2
split-debuginfo = "packed"

# Fast dev builds, but with optimized third-party crates so tests run
# at a reasonable speed.
[profile.dev.package."*"]
opt-level = 2

[profile.dist]
inherits = "release"
