[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.1"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/rnabioco/escapepod-rs"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
# Error handling
anyhow = "1"
# Arrow ecosystem
arrow = { version = "59", default-features = false, features = ["ipc"] }
byteorder = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# CLI
clap = { version = "4", features = ["derive"] }
# GPU acceleration (opt-in via `gpu` feature; runtime-compiled CUDA kernels via NVRTC).
cudarc = { version = "0.19", default-features = false, features = ["cuda-12020", "driver", "nvrtc", "std", "dynamic-loading"] }
# Workspace crates
escapepod-demux = { path = "crates/escapepod-demux", version = "0.5.1" }
escapepod-pod5 = { path = "crates/escapepod-pod5", version = "0.5.1" }
escapepod-signal = { path = "crates/escapepod-signal", version = "0.5.1" }
# Serialization
flatbuffers = "25"
indicatif = "0.18"
# I/O
memmap2 = "0.9"
numpy = "0.29"
# Parquet I/O for fingerprint tables (workspace dep so both test fixtures
# and the CLI share the same version; features are kept default-off at
# the workspace level so non-parquet crates don't pay).
parquet = { version = "59", default-features = false, features = ["arrow", "snap", "zstd"] }
# Python bindings
pyo3 = { version = "0.29", features = ["extension-module"] }
rayon = "1"
# k-mer model prefetch (opt-in via `models-download`). rustls (not native-tls)
# so the static-musl release binary stays self-contained — the transitive ureq
# from `ort` uses native-tls→openssl, which we deliberately avoid here.
sha2 = "0.10"
thiserror = "2"
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pure-Rust ONNX runtime for the CNN adapter detector (opt-in via `cnn-detect`).
tract-onnx = "0.23"
uuid = { version = "1", features = ["v4"] }
# Compression
zstd = "0.13"

# `cargo bench` uses [profile.bench], which by default does NOT inherit from
# [profile.release]. Pin it here so microbenchmarks measure the same codegen
# (LTO, single codegen unit) that ships in the release binary. `strip` is
# disabled so criterion has symbols; `panic` is not set because Cargo ignores
# it for bench profiles (bench binaries always unwind).
[profile.bench]
inherits = "release"
strip = false

# Fast dev builds, but with optimized third-party crates so tests run
# at a reasonable speed.
[profile.dev.package."*"]
opt-level = 2

# Optimized release build: LTO + single codegen unit for maximum performance.
[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dist]
inherits = "release"

# Profiling build: drops LTO and splits codegen so frames aren't inlined
# away from profilers (valgrind, perf, samply). Slower than release, but
# faithfully reports call graphs.
[profile.profiling]
inherits = "release"
debug = 2
split-debuginfo = "packed"
strip = false
lto = false
codegen-units = 16

# Release-speed build with symbols preserved — for samply/perf recordings
# where you want final codegen but readable stack traces. Debuginfo is
# split into a sibling `.dwp` so the binary stays small and link time
# doesn't balloon; samply/perf/gdb pick up the sidecar automatically.
[profile.release-with-debug]
inherits = "release"
debug = 2
split-debuginfo = "packed"
strip = false
