[package]
name = "escapepod-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tools for working with POD5 files (Oxford Nanopore)"
repository.workspace = true
license.workspace = true

[[bin]]
name = "escapepod"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bstr = "1"
chrono = "0.4"
clap = { workspace = true }
csv = "1"
indicatif = { workspace = true }
# BAM file support
noodles-bam = "0.85"
noodles-bgzf = "0.45"
noodles-core = "0.18"
noodles-csi = "0.53"
noodles-sam = "0.81"
owo-colors = "4"
escapepod = { workspace = true }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
uuid = { workspace = true }
walkdir = "2"
