[package]
name = "escapepod-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tools for working with POD5 files (Oxford Nanopore)"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["nanopore", "pod5", "sequencing", "bioinformatics", "cli"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "escpod"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bstr = "1"
chrono = "0.4"
clap = { workspace = true }
csv = "1"
escapepod = { workspace = true }
flate2 = "1"
indicatif = { workspace = true }
# BAM file support
noodles-bam = "0.87"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-csi = "0.55"
noodles-sam = "0.83"
owo-colors = "4"
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
uuid = { workspace = true }
walkdir = "2"

[features]
default = []
experimental = []
train = ["escapepod/train", "experimental"]
