[package]
name = "escapepod-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tools for working with POD5 files (Oxford Nanopore)"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["nanopore", "pod5", "sequencing", "bioinformatics", "cli"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "escpod"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bstr = "1"
chrono = { workspace = true }
clap = { workspace = true }
csv = "1"
escapepod-signal = { workspace = true }
flate2 = "1"
indicatif = { workspace = true }
# BAM file support
noodles-bam = "0.87"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-csi = "0.55"
noodles-sam = "0.83"
owo-colors = "4"
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = "2"

[features]
default = []
experimental = []
# Barcode demultiplexing commands. Experimental — opt in with `--features demux`.
demux = ["escapepod-signal/demux"]
# Training support for demux SVM models (implies `demux`).
train = ["demux", "escapepod-signal/train"]
# GPU-accelerated DTW for demux classify (requires CUDA driver at runtime).
gpu = ["demux", "escapepod-signal/gpu"]
# CNN-based adapter detection (requires a local ADAPTed-exported .onnx model
# at runtime; weights are CC BY-NC 4.0 and not bundled).
cnn-detect = ["demux", "escapepod-signal/cnn-detect"]
