[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "escapepod"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.maturin]
python-source = "python"
module-name = "escapepod._escapepod"
features = ["pyo3/extension-module"]
