[package]
name = "escapepod-signal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Signal-processing algorithms (DTW, resquiggle, segmentation; opt-in barcode demux) for Oxford Nanopore POD5 data"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["nanopore", "pod5", "sequencing", "bioinformatics"]
categories = ["science", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
escapepod-pod5 = { workspace = true }
flate2 = "1"
ndarray = "0.16"
rand = "0.10"
rayon = { workspace = true }
uuid = { workspace = true }

# Demux dependencies (opt-in via `demux` feature)
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Training dependencies (opt-in via `train` feature; implies `demux`)
linfa = { version = "0.8", optional = true }
linfa-svm = { version = "0.8", optional = true }

# GPU acceleration (opt-in via `gpu` feature; NVRTC-compiled CUDA kernels).
cudarc = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = []
# Barcode demultiplexing (WarpDemuX-style DTW/SVM classification).
# Experimental — opt in with `--features demux`.
demux = ["dep:serde", "dep:serde_json"]
# Training support for demux models (requires `demux`).
train = ["demux", "linfa", "linfa-svm"]
# GPU-accelerated DTW distance matrix (requires CUDA driver at runtime).
# Implies `demux` — the GPU path only benefits the demux classifier today.
gpu = ["demux", "dep:cudarc", "dep:thiserror"]

[dev-dependencies]
arrow = { workspace = true }
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
noodles-bam = "0.87"
noodles-sam = "0.83"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "hot_paths"
harness = false

[[bench]]
name = "hot_paths_gpu"
harness = false
required-features = ["gpu"]
