[package]
name = "escapepod-signal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Signal-processing algorithms (DTW, resquiggle, segmentation) for Oxford Nanopore POD5 data. Barcode demultiplexing lives in the companion `escapepod-demux` crate."
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["nanopore", "pod5", "sequencing", "bioinformatics"]
categories = ["science", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
escapepod-pod5 = { workspace = true }
flate2 = "1"
ndarray = "0.16"
rand = "0.10"
rayon = { workspace = true }
uuid = { workspace = true }

# GPU acceleration (opt-in via `gpu` feature; NVRTC-compiled CUDA kernels).
cudarc = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = []
# GPU-accelerated DTW distance matrix (requires CUDA driver at runtime).
# Exposes `dtw::cuda::GpuDtwContext` and `dtw_distance_matrix_gpu`. Demux
# consumers wire these in through the `escapepod-demux` crate.
gpu = ["dep:cudarc", "dep:thiserror"]

[dev-dependencies]
arrow = { workspace = true }
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
noodles-bam = "0.87"
noodles-sam = "0.83"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "hot_paths"
harness = false

[[bench]]
name = "hot_paths_gpu"
harness = false
required-features = ["gpu"]
