[package]
name = "escapepod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for reading and writing POD5 files (Oxford Nanopore)"
repository.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
byteorder = { workspace = true }
csv = "1"
flatbuffers = { workspace = true }
memmap2 = { workspace = true }
ndarray = "0.16"
rayon = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
