[package]
name = "escapepod"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Signal-processing algorithms (DTW, demux, resquiggle, segmentation) for Oxford Nanopore POD5 data"
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords = ["nanopore", "pod5", "sequencing", "bioinformatics"]
categories = ["science", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
escapepod-pod5 = { workspace = true }
flate2 = "1"
ndarray = "0.16"
rand = "0.10"
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }

# Training dependencies (optional)
linfa = { version = "0.8", optional = true }
linfa-svm = { version = "0.8", optional = true }

[features]
default = []
train = ["linfa", "linfa-svm"]

[dev-dependencies]
arrow = { workspace = true }
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
noodles-bam = "0.87"
noodles-sam = "0.83"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "hot_paths"
harness = false
