[package]
name = "podfive-core"
description = "Core library for reading and writing POD5 files (Oxford Nanopore)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
flatbuffers = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
tempfile = "3"
