[package]
name = "podfive-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for reading and writing POD5 files (Oxford Nanopore)"
repository.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
byteorder = { workspace = true }
csv = "1"
flatbuffers = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempfile = "3"
