[package]
name = "escapepod-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI tools for working with POD5 files (Oxford Nanopore)"
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["bioinformatics", "cli", "nanopore", "pod5", "sequencing"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "escpod"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow = { workspace = true }
bstr = "1"
chrono = { workspace = true }
clap = { workspace = true }
csv = "1"
# Demux commands live in a separate crate; pulled in only when the `demux`
# feature is on so non-demux builds don't pay for serde/linfa/tract-onnx.
escapepod-demux = { workspace = true, optional = true }
escapepod-signal = { workspace = true }
flate2 = "1"
indicatif = { workspace = true }
# BAM file support
noodles-bam = "0.88"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-csi = "0.55"
noodles-sam = "0.84"
owo-colors = "4"
parquet = { workspace = true }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = "2"

[features]
default = []
# CNN-based adapter detection (requires a local ADAPTed-exported .onnx model
# at runtime; weights are CC BY-NC 4.0 and not bundled).
cnn-detect = ["demux", "escapepod-demux/cnn-detect"]
# Barcode demultiplexing commands. Experimental — opt in with `--features demux`.
demux = ["dep:escapepod-demux"]
experimental = []
# GPU-accelerated DTW for demux classify and train-svm (requires CUDA
# driver + libnvrtc at runtime).
gpu = ["demux", "escapepod-demux/gpu"]
# Training support for demux SVM models (implies `demux`).
train = ["demux", "escapepod-demux/train"]
