[package]
name = "escapepod-pod5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "POD5 file format I/O (Oxford Nanopore) — reader, writer, VBZ compression"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bioinformatics", "nanopore", "pod5", "sequencing"]
categories = ["parser-implementations", "science"]

[[bench]]
harness = false
name = "io_hot_paths"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
byteorder = { workspace = true }
csv = "1"
flatbuffers = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
# Prototype only (rice_vs_vbz example): third-party StreamVByte/VBZ codecs.
svb = { version = "0.3", features = ["simd-auto"] }
