[package]
name = "escapepod-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "escapepod_python"

[dependencies]
escapepod-signal = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
