[package]
name = "escapepod-python"
description = "Python bindings for escapepod — fast POD5 reader/writer (published to PyPI as `escapepod`)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
# Distributed as a PyPI wheel (maturin), not on crates.io.
publish = false

[lib]
crate-type = ["cdylib"]
name = "escapepod_python"

[dependencies]
escapepod-signal = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
