[project]
name = "escapepod"
description = "Fast Rust-based reading of Oxford Nanopore POD5 signal data (the escapepod Reader bindings)"
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "escapepod"
