[package]
name = "escapepod-signal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Signal-processing algorithms (DTW, resquiggle, segmentation) for Oxford Nanopore POD5 data. Barcode demultiplexing lives in the companion `escapepod-demux` crate."
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bioinformatics", "nanopore", "pod5", "sequencing"]
categories = ["parser-implementations", "science"]

[[bench]]
harness = false
name = "hot_paths"

[[bench]]
harness = false
name = "hot_paths_gpu"
required-features = ["gpu"]

[dependencies]
anyhow = { workspace = true }
escapepod-pod5 = { workspace = true }
flate2 = "1"
ndarray = "0.16"
rand = "0.10"
rayon = { workspace = true }
uuid = { workspace = true }

# GPU acceleration (opt-in via `gpu` feature; NVRTC-compiled CUDA kernels).
cudarc = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }
noodles-bam = "0.90"
noodles-sam = "0.85"
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
tempfile = "3"

[features]
default = []
# GPU-accelerated DTW distance matrix (requires CUDA driver at runtime).
# Exposes `dtw::cuda::GpuDtwContext` and `dtw_distance_matrix_gpu`. Demux
# consumers wire these in through the `escapepod-demux` crate.
gpu = ["dep:cudarc", "dep:thiserror"]
